--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,7 @@ body {
   margin: 0 auto;
 }
 @import "blocks/promo";
+@import "blocks/header";
+@import "blocks/button";
+@import "blocks/advantages";
+@import "blocks/media";
