--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -4,3 +4,53 @@
   padding-bottom: 93px;
   background: url(../../img/bgfirst.png) center (center/cover) no-repeat;
 }
+.promo__wrapper {
+  margin-top: 91px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.promo__header {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 42px;
+}
+.promo__subheader {
+  margin-top: -17px;
+  font-weight: 500;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.promo__icons {
+  margin-top: 65px;
+  display: flex;
+  justify-content: space-between;
+  width: 424px;
+}
+.promo__icon {
+  width: 107px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  color: #ffffff;
+  img {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+}
+.promo__link {
+  margin-top: 23px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #ffffff;
+}
+a {
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  color: #ffffff;
+}
