--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,6 @@
 * {
   font-family: "Museo Sans Cyrl", sans-serif;
 }
-body {
-  margin: 0 0 0 0;
-}
 .container {
   max-width: 950px;
   margin: 0 auto;
@@ -13,3 +10,4 @@ body {
 @import "blocks/button";
 @import "blocks/advantages";
 @import "blocks/media";
+@import "blocks/consultation";
