--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,5 +9,7 @@
 @import "blocks/header";
 @import "blocks/button";
 @import "blocks/advantages";
-@import "blocks/media";
 @import "blocks/consultation";
+@import "blocks/forms";
+@import "blocks/media";
+@import "blocks/carousel";
