--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,56 +1,55 @@
 .promo {
   min-height: 650px;
-  padding-top: 21px;
-  padding-bottom: 93px;
-  background: url(../../img/bgfirst.png) center (center/cover) no-repeat;
-}
-.promo__wrapper {
-  margin-top: 91px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-.promo__header {
-  text-transform: uppercase;
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 42px;
-}
-.promo__subheader {
-  margin-top: -17px;
-  font-weight: 500;
-  font-size: 24px;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.promo__icons {
-  margin-top: 65px;
-  display: flex;
-  justify-content: space-between;
-  width: 424px;
-}
-.promo__icon {
-  width: 107px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 14px;
-  color: #ffffff;
-  img {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 20px;
+  padding: 21px 0 93px 0;
+  background: url("../img/bgfirst.png") center (center/cover) no-repeat;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
   }
-}
-.promo__link {
-  margin-top: 23px;
-  font-weight: 400;
-  font-size: 16px;
-  color: #ffffff;
-}
-a {
-  font-weight: 500;
-  font-size: 16px;
-  text-decoration: underline;
-  text-transform: uppercase;
-  color: #ffffff;
+  &__header {
+    color: #ffffff;
+    font-size: 42px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 42px;
+  }
+  &__subheader {
+    margin-top: 17px;
+    color: #ffffff;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+  &__icons {
+    margin-top: 65px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__icon {
+    width: 108px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
+    }
+  }
+  &__link {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 18px;
+    a {
+      color: #ffffff;
+      text-transform: uppercase;
+      text-decoration: underline;
+    }
+  }
 }
