--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@import "base/variables";
 * {
   font-family: "Museo Sans Cyrl", sans-serif;
 }
@@ -6,11 +7,13 @@
   margin: 0 auto;
 }
 @import "blocks/promo";
-@import "blocks/header";
+@import "blocks/header.scss";
 @import "blocks/button";
 @import "blocks/advantages";
+@import "blocks/title";
 @import "blocks/consultation";
 @import "blocks/forms";
-@import "blocks/media";
 @import "blocks/carousel";
 @import "blocks/catalog";
+@import "blocks/feed";
+@import "blocks/footer";
